--- a/PhenoPad/CustomControl/WordBlockControl.xaml
+++ b/PhenoPad/CustomControl/WordBlockControl.xaml
@@ -31,5 +31,6 @@
 
     <Grid Background="Transparent">
         <TextBlock x:Name="WordBlock" Text="{x:Bind current}" x:FieldModifier="public" FontSize="26" Tapped="ShowWordCandidate" />
+        <TextBlock x:Name="AbbreviationBlock" Text="" x:FieldModifier="public" FontSize="26" Tapped="ShowAbbrCandidate" Visibility="Collapsed" />
     </Grid>
 </UserControl>
